clusters/talos-cluster/whisper/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whisper
  labels:
    name: whisper
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
