clusters/talos-cluster/whisper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisper-service
  namespace: whisper
spec:
  selector:
    app: whisper
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
